feat: add new field reposts and change repostsUsers. Change Dto. Add repostPost method.